[project]
name = "trademind"
version = "0.1.0"
description = "TradeMind — Trade Behaviour Analyser powered by Claude"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.102.0",
    "fastapi>=0.136.1",
    "groq>=1.2.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
]
